--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,22 @@ body,
 html {
   height: 100%;
 }
+
+/* Set Legend Style */
+.info {
+  padding: 10px;
+  background: #E5E7E9;
+  border-radius: 5px;
+}
+
+.legend {
+  line-height: 25px;
+}
+
+.legend i {
+  width: 20px;
+  height: 20px;
+  float: right;
+  margin-right: 10px; 
+  opacity: 0.75;
+}
